<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- <PreferenceCategory android:title="pref_user_profile" >
        <EditTextPreference 
            	android:title="pref_user_name" 
            	android:summary="pref_user_name_summary" 
            	android:key="prefUsername"/>
    </PreferenceCategory> -->
    
    <PreferenceCategory android:title="@string/action_settings" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/single_tap_action"
            android:title="@string/single_tap_action"
            android:summary="@string/single_tap_action_summary" >
        </CheckBoxPreference>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/search_in_phone_numbers"
            android:title="@string/search_in_phone_numbers"
            android:summary="@string/search_in_phone_numbers_summary" >
        </CheckBoxPreference>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/phone_number"
            android:title="@string/phone_number"
            android:summary="@string/phone_number_summary" >
        </CheckBoxPreference>
        
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/email"
            android:title="@string/email"
            android:summary="@string/email_summary" >
        </CheckBoxPreference>
        
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/address"
            android:title="@string/address"
            android:summary="@string/address_summary" >
        </CheckBoxPreference>
        
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/organization"
            android:title="@string/organization"
            android:summary="@string/organization_summary" >
        </CheckBoxPreference>
        
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/relation"
            android:title="@string/relation"
            android:summary="@string/relation_summary" >
        </CheckBoxPreference>
        
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/notes"
            android:title="@string/notes"
            android:summary="@string/notes_summary" >
        </CheckBoxPreference>
        
        <!-- <ListPreference
            android:key="@string/strequent"
            android:entries="@array/sortOrderNames" 
            android:entryValues="@array/sortOrderValues"
            android:title="@string/sort_order"
            android:summary="@string/sort_order_summary" /> -->
    </PreferenceCategory>

</PreferenceScreen>